--- a/notebook/templates/page.html
+++ b/notebook/templates/page.html
@@ -5,27 +5,27 @@
     <meta charset="utf-8">
 
     <title>{% block title %}Jupyter Notebook{% endblock %}</title>
-    {% block favicon %}<link id="favicon" rel="shortcut icon" type="image/x-icon" href="{{static_url("base/images/favicon.ico") }}">{% endblock %}
+    {% block favicon %}<link id="favicon" rel="shortcut icon" type="image/x-icon" href="/service/jnotebook/static/base/images/favicon.ico">{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="{{static_url("components/jquery-ui/themes/smoothness/jquery-ui.min.css") }}" type="text/css" />
-    <link rel="stylesheet" href="{{static_url("components/jquery-typeahead/dist/jquery.typeahead.min.css") }}" type="text/css" />
+    <link rel="stylesheet" href="/service/jnotebook/static/components/jquery-ui/themes/smoothness/jquery-ui.min.css" type="text/css" />
+    <link rel="stylesheet" href="/service/jnotebook/static/components/jquery-typeahead/dist/jquery.typeahead.min.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     {% block stylesheet %}
-    <link rel="stylesheet" href="{{ static_url("style/style.min.css") }}" type="text/css"/>
+    <link rel="stylesheet" href="/service/jnotebook/static/style/style.min.css" type="text/css"/>
     {% endblock %}
     <link rel="stylesheet" href="{{ base_url }}custom/custom.css" type="text/css" />
-    <script src="{{static_url("components/es6-promise/promise.min.js")}}" type="text/javascript" charset="utf-8"></script>
-    <script src="{{static_url('components/react/react.production.min.js')}}" type="text/javascript"></script>
-    <script src="{{static_url('components/react/react-dom.production.min.js')}}" type="text/javascript"></script>
-    <script src="{{static_url('components/create-react-class/index.js')}}" type="text/javascript"></script>
-    <script src="{{static_url('components/requirejs/require.js') }}" type="text/javascript" charset="utf-8"></script>
+    <script src="/service/jnotebook/static/components/es6-promise/promise.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/service/jnotebook/static/components/react/react.production.min.js" type="text/javascript"></script>
+    <script src="/service/jnotebook/static/components/react/react-dom.production.min.js" type="text/javascript"></script>
+    <script src="/service/jnotebook/static/components/create-react-class/index.js" type="text/javascript"></script>
+    <script src="/service/jnotebook/static/components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
     <script>
       require.config({
           {% if version_hash %}
           urlArgs: "v={{version_hash}}",
           {% endif %}
-          baseUrl: '{{static_url("", include_version=False)}}',
+          baseUrl: '/service/jnotebook/static/',
           paths: {
             'auth/js/main': 'auth/js/main.min',
             custom : '{{ base_url }}custom',
@@ -126,7 +126,7 @@ dir="ltr">
   <div id="header-container" class="container">
   <div id="ipython_notebook" class="nav navbar-brand"><a href="{{default_url}}
     {%- if logged_in and token -%}?token={{token}}{%- endif -%}" title='{% trans %}dashboard{% endtrans %}'>
-      {% block logo %}<img src='{{static_url("base/images/logo.png") }}' alt='Jupyter Notebook'/>{% endblock %}
+      {% block logo %}<img src='/service/jnotebook/static/base/images/logo.png' alt='Jupyter Notebook'/>{% endblock %}
   </a></div>
 
   {% block headercontainer %}
