--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% block favicon %}<link id="favicon" rel="shortcut icon" type="image/x-icon" href="{{static_url("base/images/favicon-notebook.ico") }}">{% endblock %}
+{% block favicon %}<link id="favicon" rel="shortcut icon" type="image/x-icon" href="/service/jnotebook/static/base/images/favicon-notebook.ico">{% endblock %}
 
 {% block stylesheet %}
 
@@ -13,12 +13,12 @@
 window.mathjax_url = "{{mathjax_url}}";
 </script>
 
-<link rel="stylesheet" href="{{ static_url("components/bootstrap-tour/build/css/bootstrap-tour.min.css") }}" type="text/css" />
-<link rel="stylesheet" href="{{ static_url("components/codemirror/lib/codemirror.css") }}">
+<link rel="stylesheet" href="/service/jnotebook/static/components/bootstrap-tour/build/css/bootstrap-tour.min.css" type="text/css" />
+<link rel="stylesheet" href="/service/jnotebook/static/components/codemirror/lib/codemirror.css">
 
 {{super()}}
 
-<link rel="stylesheet" href="{{ static_url("notebook/css/override.css") }}" type="text/css" />
+<link rel="stylesheet" href="/service/jnotebook/static/notebook/css/override.css" type="text/css" />
 <link rel="stylesheet" href=""  id='kernel-css'                             type="text/css" />
 
 {% endblock %}
