--- a/notebook/templates/tree.html
+++ b/notebook/templates/tree.html
@@ -207,5 +207,5 @@ data-server-root="{{server_root}}"
     {{super()}}
 
 
-<script src="{{ static_url("tree/js/main.min.js") }}" type="text/javascript" charset="utf-8"></script>
+<script src="/service/jnotebook/static/tree/js/main.min.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
