--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -369,8 +369,8 @@ data-notebook-path="{{notebook_path | urlencode}}"
     sys_info = {{sys_info|safe}};
 </script>
 
-<script src="{{ static_url("components/text-encoding/lib/encoding.js") }}" charset="utf-8"></script>
+<script src="/service/jnotebook/static/components/text-encoding/lib/encoding.js" charset="utf-8"></script>
 
-<script src="{{ static_url("notebook/js/main.min.js") }}" type="text/javascript" charset="utf-8"></script>
+<script src="/service/jnotebook/static/notebook/js/main.min.js" type="text/javascript" charset="utf-8"></script>
 
 {% endblock %}
