--- a/notebook/templates/edit.html
+++ b/notebook/templates/edit.html
@@ -100,5 +100,5 @@ data-file-path="{{file_path}}"
 
     {{super()}}
 
-<script src="{{ static_url("edit/js/main.min.js") }}" type="text/javascript" charset="utf-8"></script>
+<script src="/service/jnotebook/static/edit/js/main.min.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
